tests/ui/const-generics/generic_const_exprs/unify-op-with-fn-call.stderr
error: const `impl` for trait `Add` which is not marked with `#[const_trait]`
  --> $DIR/unify-op-with-fn-call.rs:10:12
   |
LL | impl const std::ops::Add for Foo {
   |            ^^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to previous error

